node-port.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-nodeport
  namespace: n8n
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
  - port: 80
    targetPort: 5678
    nodePort: 30678
    protocol: TCP
